--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/cryptotext/truffle-github-actions/issues"
   },
-  "homepage": "https://github.com/cryptotext/truffle-github-actions#readme"
+  "homepage": "https://github.com/cryptotext/truffle-github-actions#readme",
+  "dependencies": {
+    "truffle": "^5.3.11"
+  }
 }
