--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/cryptotext/truffle-github-actions#readme",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.1.0",
     "truffle": "^5.3.11"
   }
 }
