--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm run build --if-present
     - run: npm install -g truffle
+    - run: npm install @openzeppelin/contracts
     - run: npm test
